--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "mongoose": "^8.12.1",
     "mongoose-delete": "^1.0.2",
     "multer": "^1.4.5-lts.1",
+    "node-fetch": "^2.7.0",
     "pdfkit": "^0.17.0",
     "swagger-jsdoc": "^6.2.8",
     "swagger-ui-express": "^5.0.1"
