--- a/package.json
+++ b/package.json
@@ -18,11 +18,13 @@
     "express": "^4.21.2",
     "express-validator": "^7.2.1",
     "fetch": "^1.1.0",
+    "googleapis": "^148.0.0",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.12.1",
     "mongoose-delete": "^1.0.2",
     "multer": "^1.4.5-lts.1",
     "node-fetch": "^2.7.0",
+    "nodemailer": "^6.10.1",
     "pdfkit": "^0.17.0",
     "swagger-jsdoc": "^6.2.8",
     "swagger-ui-express": "^5.0.1"
