--- a/.env.example
+++ b/.env.example
@@ -4,3 +4,9 @@ PUBLIC_URL //este es el URL de la página web que se desplegará
 CLAVE_SECRETA //esta es la clave secreta que se usará para firmar los tokens JWT
 Refresh_token //este es el token de actualización que se usará para obtener un nuevo token de acceso cuando el token de acceso expire para la API de Google
 Access_token //este es el token de acceso que se usará para autenticar las peticiones a la API de Google para mandar correos
+EMAIL //este es el correo electrónico que se usará para autenticar las peticiones a la API de Google para mandar correos
+CLIENT_ID //este es el ID de cliente que se usará para autenticar las peticiones a la API de Google para mandar correos
+CLIENT_SECRET //este es el secreto de cliente que se usará para autenticar las peticiones a la API de Google para mandar correos
+PINATA_GATEWAY_URL //este es el URL de la puerta de enlace de Pinata que se usará para subir archivos a IPFS
+PINATA_KEY //este es la clave de API de Pinata que se usará para subir archivos a IPFS
+PINATA_SECRET //este es el secreto de API de Pinata que se usará para subir archivos a IPFS
