slack añadido y .env.example actualizado

--- a/.env.example
+++ b/.env.example
@@ -10,3 +10,4 @@ CLIENT_SECRET //este es el secreto de cliente que se usará para autenticar las 
 PINATA_GATEWAY_URL //este es el URL de la puerta de enlace de Pinata que se usará para subir archivos a IPFS
 PINATA_KEY //este es la clave de API de Pinata que se usará para subir archivos a IPFS
 PINATA_SECRET //este es el secreto de API de Pinata que se usará para subir archivos a IPFS
+SLACK_WEBHOOK //este es el webhook de Slack que se usará para enviar mensajes a un canal de Slack
